// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TestResultsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={Object {}}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="testResultPanel"
      onExpand={[Function]}
      onShow={[Function]}
      title="Test Result"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Test Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    complete blood count
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Status
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Final
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Sample Taken
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Aug-2015
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Conclusion
                  </label>
                  <div
                    className="form-control-static"
                  >
                    abnormal result indicating infection
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Dr Lab
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    19-Aug-2015
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    marand
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
    <PluginDetailPanel
      editedPanel={Object {}}
      formValues={true}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="metaPanel"
      onExpand={[Function]}
      onShow={[Function]}
      title="Results (0)"
    >
      <div
        className="panel-expand-wrapper"
      >
        <div
          className="panel-body-inner"
        >
          <div
            className="form"
          >
            <div
              className="form-group-wrapper"
            >
              <div
                className="form-group"
              >
                <div
                  className="form-control-static"
                >
                  No results
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TestResultsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={Object {}}
      formValues={true}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="metaPanel"
      onExpand={[Function]}
      onShow={[Function]}
      title="Results (0)"
    >
      <div
        className="panel-expand-wrapper"
      >
        <div
          className="panel-body-inner"
        >
          <div
            className="form"
          >
            <div
              className="form-group-wrapper"
            >
              <div
                className="form-group"
              >
                <div
                  className="form-control-static"
                >
                  No results
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TestResultsDetail /> should renders correctly with different state of props 3`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={Object {}}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="testResultPanel"
      onExpand={[Function]}
      onShow={[Function]}
      title="Test Result"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Test Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    complete blood count
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Status
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Final
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Sample Taken
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Aug-2015
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Conclusion
                  </label>
                  <div
                    className="form-control-static"
                  >
                    abnormal result indicating infection
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Dr Lab
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    19-Aug-2015
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    marand
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TestResultsDetail /> should renders with all props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      currentPanel="currentPanel"
      editedPanel={Object {}}
      formValues={Object {}}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="testResultPanel"
      onCancel={[Function]}
      onEdit={[Function]}
      onExpand={[Function]}
      onSaveSettings={[Function]}
      onShow={[Function]}
      title="Test Result"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Test Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    complete blood count
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Status
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Final
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Sample Taken
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Aug-2015
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Conclusion
                  </label>
                  <div
                    className="form-control-static"
                  >
                    abnormal result indicating infection
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Dr Lab
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    19-Aug-2015
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    marand
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
    <PluginDetailPanel
      currentPanel="currentPanel"
      editedPanel={Object {}}
      formValues={true}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="metaPanel"
      onCancel={[Function]}
      onEdit={[Function]}
      onExpand={[Function]}
      onSaveSettings={[Function]}
      onShow={[Function]}
      title="Results (3)"
    >
      <div
        className="panel-expand-wrapper"
      >
        <div
          className="panel-expand-row"
          key="row-0"
        >
          <div
            className="panel-expand-item"
            key="row-0"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="form"
              >
                <div
                  className="form-group-wrapper"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Results
                    </label>
                    <div
                      className="form-control-static"
                    >
                      white blood cell count
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Value
                    </label>
                    <div
                      className="form-control-static"
                    >
                      13.6
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Unit
                    </label>
                    <div
                      className="form-control-static"
                    >
                      10*9/l
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Normal Range
                    </label>
                    <div
                      className="form-control-static"
                    >
                       - 
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Comment
                    </label>
                    <div
                      className="form-control-static"
                    >
                      indicates infection
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="panel-expand-item"
            key="row-1"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="form"
              >
                <div
                  className="form-group-wrapper"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Results
                    </label>
                    <div
                      className="form-control-static"
                    >
                      platelet count
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Value
                    </label>
                    <div
                      className="form-control-static"
                    >
                      587
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Unit
                    </label>
                    <div
                      className="form-control-static"
                    >
                      10*9/l
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Normal Range
                    </label>
                    <div
                      className="form-control-static"
                    >
                       - 
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="panel-expand-row"
          key="row-1"
        >
          <div
            className="panel-expand-item"
            key="row-0"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="form"
              >
                <div
                  className="form-group-wrapper"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Results
                    </label>
                    <div
                      className="form-control-static"
                    >
                      platelet count
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Value
                    </label>
                    <div
                      className="form-control-static"
                    >
                      587
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Unit
                    </label>
                    <div
                      className="form-control-static"
                    >
                      10*9/l
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Normal Range
                    </label>
                    <div
                      className="form-control-static"
                    >
                       - 
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
